@@ -71,7 +71,14 @@
 [X] Finish the new diff plugin
 [~] Unshade the plugins that need a document to be usable
 	[ ] MDI mode = TOPLEVEl, fix.
-[ ] Plugin manager
+[~] Plugin manager
+	[X] Basic manager
+	[ ] Add plugin description
+	[ ] Assign short-cut keys to pluggin
+	[ ] Fix the crash when mdi mode = toplevel
+	[ ] Fix the problem with mdi_mode =toplevel, where the menus
+            do not get updated.
+[ ] Fix multiple views crash, reported by drake.
 
 *** Chema maybe ***
 [ ] Try to fix the line & column pos
