@@ -1,3 +1,7 @@
-SUBDIRS = browse diff email time convert sample reverse shell_output
+## Add the subdirectories in the pd->name order, so that
+## the menus show the plugins in alphabetical order. The
+## correct solution is to add a sort function before adding
+## to the menus. But this is a temp fix
+SUBDIRS = browse convert diff email sample time reverse shell_output
 
 EXTRA_DIST = ChangeLog
