@@ -1,5 +1,11 @@
 2000-06-26  Chema Celorio  <chema@celorio.com>
 
+	* plugin.c (gedit_plugin_save_settings): save the plugins that are installed
+
+	* prefs.c (gedit_prefs_save_settings): call gedit_plugin_save_settings
+
+2000-06-26  Chema Celorio  <chema@celorio.com>
+
 	* dialogs/dialog-plugins.c (gedit_plugin_manager_create): new function
 	(gedit_plugin_manager_clicked): new func
 	(gedit_plugin_manager_destroy): new func
